# kinopy

./: .gitignore  LICENSE  README.md  cal.css  cal.js  demo.py  kinopy.toml.example  main.py  pyproject.toml
example_data/: alamo.json  brattle.html  coolidge_film_card.html  coolidge_showings.html  harvard_film_archive_calendar.html  kendall.json  kendall_details.json  regent.json  regent_schedule.html  somerville_veezi_data.json
src/kinopy/: __init__.py  __main__.py  config.py
src/kinopy/datamodel/: __init__.py  showing.py  showingcalendar.py  types_.py
src/kinopy/provider/: __init__.py  alamo_drafthouse.py  apple_cinemas.py  brattle.py  coolidge_corner.py  harvard_film_archive.py  landmark_kendall.py  regent_theatre.py  showingprovider.py  somerville_theatre.py
src/kinopy/util/: __init__.py  cache.py  enum_.py  web.py
