[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kinopy"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "backports.strenum ; python_version < '3.11'",
    # NOTE: curl_cffi is a wrapper of curl-impersonate, which is useful to get around TLS fingerprinting
    "curl_cffi",
    "lxml",
    "pydantic>=2.11, <3",
    "pydantic-settings>=2.10, <3",
    "requests",
    "tomli ; python_version < '3.11'",
]

[tools.setuptools.dynamic]
version.attr = "kinopy.__version__"
